@startuml
skinparam classAttributeIconSize 0


class DefinePayment {
  -Time timeToPay
  -Data dateToPay
  -int nrDays
}


class Platform {
  +OrganizationRegister getOrganizationRegister()
  +schedulesPayment(email)
}

class DefinePaymentController {
  +newPayment(time, date, nrDays)
  +registersPayment()
}

class ApplicationPOT {
  +static getInstance()
  +getLogin()
}

class RegisterOrganization {
  +getOrganizationByUserEmail(email)
}

class PaymentUI {
}

class Organization {
  -String name
  -String email
  -String NIF
  +Organization(name, email,nif)
  +DefinePayment getDefinePayment()
  +DefinePayment setDefinePayment()
  +DefinePayment newDefinePayment(time, date, rtp)
}

PaymentUI ..> DefinePaymentController
DefinePaymentController ..> Platform
DefinePaymentController ..> ApplicationPOT
Platform "1" ..> "1" RegisterOrganization
RegisterOrganization "1" ..> "*" Organization
Organization ..> DefinePayment



@enduml